apps/web/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea

    spec:
      containers:
      - name: gitea
        # https://hub.docker.com/r/gitea/gitea/tags?page=1
        image: gitea/gitea:1.21.7
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
          - containerPort: 3000
          - containerPort: 222
        volumeMounts:
          - name: gitea-data
            mountPath: /data
      volumes:
      - name: gitea-data
        nfs:
          server: "10.0.20.3"
          path: /mnt/tank/gitea
