apps/web/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
