apps/web/gitea/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: &appname gitea
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: ingress-route-match
      kind: Rule
      priority: 10
      services:
        - name: *appname
          port: 80
      middlewares:
        - name: https-only
        - name: authentik-forwardauth-media
    - kind: Rule
      match: ingress-route-authentik
      priority: 15
      services:
          - kind: Service
            name: authentik-server
            port: 80
      middlewares:
        - name: https-only
    - match: Host(`git.k8s.maxwlang.com`)
      kind: Rule
      services:
        - name: *appname
          port: 80
  tls:
    secretName: gitea-cert
