apps/web/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  namespace: web
  name: &appname gitea
spec:
  rules:
  - host: &uri_gitea uri-gittea
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  tls:
  - hosts:
    - *uri_gitea
    secretName: *appname
